--- a/index.html
+++ b/index.html
@@ -10,24 +10,34 @@
   integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0="
   crossorigin="anonymous"></script>
 
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.2/css/all.min.css" integrity="sha512-HK5fgLBL+xu6dm/Ii3z4xhlSUyZgTT9tuc/hSrtw6uzJOvgRr2a9jyxxT1ely+B+xFAmJKVSTbpM/CuL7qxO8w==" crossorigin="anonymous" />
+
   <link rel="stylesheet" href="./normalize.css">
 
   <style>
+    body {
+        background-color: #F3F3F3;
+    }
+
     header{
         width: 100%;
         height: 192px;
-        background-color: rgb(139, 73, 73);
         display: flex;
         flex-direction: row;
         justify-content: center;
         align-items: center;
+        border-bottom :1px solid black; 
     }
 
     header > input {
+        font-size: small;
         width: 375px;
-        height: 48px;
+        height: 32px;
         padding-left: 12px;
-        border: 1px solid ;
+        border: 1px solid #01B5CE;
+        border-right: 0px;
+        border-top-right-radius: 0 !important;
+        border-bottom-right-radius: 0px !important;
         border-radius: 30px;
         box-shadow: 2px 2px 22px rgb(167, 142, 142);
     }
@@ -40,6 +50,31 @@
         outline : none !important;
     }
 
+    header > button {
+        border : 1px;
+        width: 62px;
+        height: 36px;
+        background-color: #01B5CE;
+        border-radius: 30px;
+        border-left: 0;
+        border-top-left-radius: 0;
+        border-bottom-left-radius: 0;
+        cursor: pointer;
+    }
+
+    header > button > i {
+        color: white;
+        transition: font 0.3s ease-in-out;
+    }
+
+    header > button:focus {
+        outline: none !important;
+    }
+    header > button:hover > i{
+        font-size:larger;
+        transition: font 0.3s ease-in-out;
+    }
+
 
   </style>
 
@@ -48,13 +83,11 @@
 <body>
     <header>
         <input type="text" placeholder="Search The fucking Books" id="input"></input>
-        
+        <button onclick="getirGotur()">
+            <i class="fa fa-search"></i>
+        </button>
     </header>
 
-
-    
-
-    <button onclick="getirGotur()">Gel kitap</button>
 
     <div id="gelenler"></div>
 </body>
